# BusinessControlSystem_FastAPI

./: .env_example  .gitignore  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: lint.yml
migration/: env.py
migration/versions/: 1b87872949d9_create_user_table.py  1c9ff95ee253_add_parent_id_to_department.py  2e1ece074850_initial.py  32ce44c67f27_update_department_model_for_ltree.py  4af3ea778231_create_tasks_tables.py  571145ce7dd7_create_department_tables.py  655060673ff7_create_companies_and_positions_tables.py  7e2ee1e79cdc_create_comp_pos_tables.py  9fde9cc10e7f_create_table_tasks.py  b41b2cc45284_create_departments_table.py  b8738d3ea201_initial.py  b9924f3a94ca_update_department_model_for_ltree_with_.py  d21727d2375d_update_department_model_for_ltree_using_.py  d2920957faad_create_users_table.py
src/: __init__.py  config.py  database.py
src/auth/: README.md  models.py  views.py
src/company/: models.py
src/core/: config.py  database.py
src/middleware/: auth_middleware.py
src/models/: company_models.py  department_models.py  position_models.py  task_models.py  user_models.py
src/schemas/: auth_schemas.py  company_schemas.py  department_schemas.py  employee_schemas.py  position_schemas.py  task_schemas.py  user_schemas.py
src/services/: base_service.py
src/task/: models.py
src/user/: models.py  repository.py  schemas.py
src/utils/: base_model.py  logging_logic.py  permissions.py  repository.py  unit_of_work.py
worker/: celery.py  notify.py  tasks.py
worker/celery_tasks_factory/: register_tasks.py  tasks_factory.py
(+67 files in other folders)
